fix(ChartTable): Fix icon alignment in expand/collapse button - broken in 85012607c20f8103809471d9a28c35e7fdf60a91

--- a/src/charts/chart-table/ChartTable.css
+++ b/src/charts/chart-table/ChartTable.css
@@ -95,7 +95,3 @@
   transform: translate(-50%, 0);
   text-align: center;
 }
-
-.ax-chart-table__collapse-expand-text {
-  margin-left: calc(var(--spacing-grid-size) * 2);
-}
